gccida/c3/init_reg_sets_1
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reg_sets_1/src/regclass.c:794:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class *p2; // [rsp+48h] [rbp-A8h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reg_sets_1/src/regclass.c:795:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class *p1; // [rsp+50h] [rbp-A0h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reg_sets_1/src/regclass.c:797:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class *p; // [rsp+60h] [rbp-90h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reg_sets_1/src/regclass.c:798:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class *pa; // [rsp+60h] [rbp-90h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reg_sets_1/src/regclass.c:983:33: error: use of undeclared identifier 'reg_class'; did you mean 'regclass'?
if ( reg_classes_intersect_p( ( reg_class)i, GENERAL_REGS) ) 
                                ^~~~~~~~~
                                regclass
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reg_sets_1/src/rtl.h:1970:13: note: 'regclass' declared here
extern void regclass                    PARAMS ((rtx, int, FILE *));
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reg_sets_1/src/regclass.c:983:43: error: expected ')'
if ( reg_classes_intersect_p( ( reg_class)i, GENERAL_REGS) ) 
                                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reg_sets_1/src/regclass.c:983:29: note: to match this '('
if ( reg_classes_intersect_p( ( reg_class)i, GENERAL_REGS) ) 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reg_sets_1/src/regclass.c:1000:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[m] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reg_sets_1/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reg_sets_1/src/regclass.c:1001:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v13 = mode_class_0[m] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reg_sets_1/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reg_sets_1/src/regclass.c:1013:34: error: use of undeclared identifier 'machine_mode'
&& ix86_hard_regno_mode_ok( j, ( machine_mode)m) ) 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reg_sets_1/src/regclass.c:1015:34: error: array type 'char [59]' is not assignable
contains_reg_of_mode[59 * i + m] = 1; 
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reg_sets_1/src/regclass.c:1035:35: error: use of undeclared identifier 'machine_mode'
cost = ix86_register_move_cost( ( machine_mode)m, ( reg_class)i, ( reg_class)j); 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reg_sets_1/src/regclass.c:1035:53: error: use of undeclared identifier 'reg_class'; did you mean 'regclass'?
cost = ix86_register_move_cost( ( machine_mode)m, ( reg_class)i, ( reg_class)j); 
                                                    ^~~~~~~~~
                                                    regclass
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reg_sets_1/src/rtl.h:1970:13: note: 'regclass' declared here
extern void regclass                    PARAMS ((rtx, int, FILE *));
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reg_sets_1/src/regclass.c:1059:28: error: use of undeclared identifier 'reg_class'; did you mean 'regclass'?
if ( reg_class_subset_p( ( reg_class)i, ( reg_class)j) ) 
                           ^~~~~~~~~
                           regclass
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reg_sets_1/src/rtl.h:1970:13: note: 'regclass' declared here
extern void regclass                    PARAMS ((rtx, int, FILE *));
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reg_sets_1/src/regclass.c:1059:38: error: expected ')'
if ( reg_class_subset_p( ( reg_class)i, ( reg_class)j) ) 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reg_sets_1/src/regclass.c:1059:24: note: to match this '('
if ( reg_class_subset_p( ( reg_class)i, ( reg_class)j) ) 
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reg_sets_1/src/regclass.c:1063:28: error: use of undeclared identifier 'reg_class'; did you mean 'regclass'?
if ( reg_class_subset_p( ( reg_class)j, ( reg_class)i) ) 
                           ^~~~~~~~~
                           regclass
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reg_sets_1/src/rtl.h:1970:13: note: 'regclass' declared here
extern void regclass                    PARAMS ((rtx, int, FILE *));
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reg_sets_1/src/regclass.c:1063:38: error: expected ')'
if ( reg_class_subset_p( ( reg_class)j, ( reg_class)i) ) 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reg_sets_1/src/regclass.c:1063:24: note: to match this '('
if ( reg_class_subset_p( ( reg_class)j, ( reg_class)i) ) 
                       ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reg_sets_1/src/obj/regclass.o] Error 1
